# nutpred

./: .gitignore  README.md  nohup.out  pyproject.toml  run.py  run_nutpred_complete.py  test_nutpred.py
.git-rewrite/: backup-refs
complete_outputs_ingredients_popcorn/: execution_summary.txt  metrics_all_models.csv  model_comparison_summary.csv
data/: THESAURUSFORPUBLICRELEASE.XLSX  desktop.ini  ingnut_df_top100.csv  ingnut_df_top135.csv  ingnut_df_top140.csv  ingnut_df_top200.csv  ingnut_df_top200.xlsx  영양성분표기기준.xlsx
nutpred/: __init__.py  cleaning.py  cli.py  metrics.py  pred_by_fullnut.py  pred_by_ingnut.py  preprocess.py  requirements.txt  viz.py
src/: code.py  main.py  nnls_alt.py  pred_by_fullnut.py  requirements.txt  viz.py
test_outputs_ingredients_popcorn,pretzel/: execution_summary_test.txt  food_df_ingredients_popcorn,pretzel_test.csv  ingredient_parsing_test.csv  ingredient_weights_ingredients_popcorn,pretzel_test.csv  metrics_test.csv  model_comparison_ingredients_popcorn,pretzel_test.csv
test_outputs_ingredients_popcorn_pretzel_pretzels/: df_with_preds_test.csv  food_df_ingredients_popcorn_pretzel_pretzels_test.csv  ingredient_parsing_test.csv  ingredient_weights_test.csv  metrics_test.csv  model_comparison_test.csv
