[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nutpred"
version = "0.3.0"
description = "Predict Calcium/Fiber/Iron from ingredients + nutrients via ML and convex optimization."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "you@example.com" }
]
keywords = ["nutrition", "ingredients", "xgboost", "cvxpy", "optimization", "machine-learning"]

dependencies = [
  "numpy>=1.23,<3",
  "pandas>=2.0,<3",
  "scikit-learn>=1.3,<2",
  "matplotlib>=3.7,<4",
  "cvxpy>=1.4,<2",
  "osqp>=0.6,<1",
  "openpyxl>=3.1,<4"
]

[project.optional-dependencies]
# Install with: pip install ".[xgboost]"
xgboost = ["xgboost>=1.7,<2"]

# Optional alternative convex solvers (choose any you plan to use)
clarabel = ["clarabel>=0.7"]
scs = ["scs>=3.2"]
ecos = ["ecos>=2.0"]
piqp = ["piqp>=0.3"]

# Dev helpers: pip install ".[dev]"
dev = [
  "pytest>=7",
  "ruff>=0.4",
  "black>=24.3",
  "ipykernel>=6",
]

[project.urls]
Homepage = "https://github.com/sarahjang15/nutpred"
Repository = "https://github.com/sarahjang15/nutpred"

[project.scripts]
nutpred = "nutpred.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nutpred*"]
